--- a/index.html
+++ b/index.html
@@ -3,17 +3,25 @@
 <head>
 
 <!-- Meta-Information -->
-  <title ng-bind="'Performance Management - ' + ($title || 'Intro')">Performance Management</title>
+<title ng-bind="'Performance Management - ' + ($title || 'Intro')">Performance Management</title>
 <meta charset="utf-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+<meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="Keywords" content="HR, Peformance, Management, Talent, Development,  Goal Setting, Mid-Year Review, Career Development, Year-End Review"/>
+<meta name="description" content="Performance management is a continuous process of defining goals and expectations, working toward those goals while demonstrating Sandia's model behaviors, and pursuing individual career success.">
+<meta content="HR Performance Managment Team" name="author"/>
+
+<link href="" title="HR Performance Managment Team" rev="owns"/>
+
+<link rel="icon" type="image/png" href="images/favicon-32x32.png" sizes="32x32">
 
 <!-- Pattern Library Stylesheets -->
 <link rel="stylesheet" href="https://pl.sandia.gov/common/current/css/snl-pl-main.css">
 <link rel="stylesheet" href="https://pl.sandia.gov/common/current/css/snl-patternLibrary.css">
 
 <!-- Our Website CSS Styles -->
-  <link rel="stylesheet" href="css/main.css">
+<link rel="stylesheet" href="css/main.css">
+
 </head>
 
 <body class="theme-clear">
@@ -26,7 +34,238 @@
     <div class="row">
       <div class="col-sm-6" ng-show="$svg">
 
-       <svg id="svg" class="left-svg" ng-svg width="100%" height="100%"></svg>
+       <svg id="svg" class="left-svg" ng-svg width="100%" height="100%">
+          <g id="talent">
+    <defs>
+        <!--     <filter id="f3" x="0" y="0" width="200%" height="200%">
+      <feOffset result="offOut" in="SourceAlpha" dx="0" dy="3" />
+      
+            <feGaussianBlur result="blurOut" in="offOut" stdDeviation="0" />            
+      <feBlend in="SourceGraphic" in2="blurOut" mode="normal" />
+    </filter> -->
+        <filter id="f-goal-setting">
+            <feGaussianBlur in="SourceAlpha" stdDeviation="0" />
+            <feOffset dx="0" dy="4" />
+            <feComponentTransfer>
+                <feFuncA type="linear" slope="0.1" />
+            </feComponentTransfer>
+            <feMerge>
+                <feMergeNode/>
+                <feMergeNode in="SourceGraphic" />
+            </feMerge>
+        </filter>
+        <filter id="f-mid-year">
+            <feGaussianBlur in="SourceAlpha" stdDeviation="0" />
+            <feOffset dx="-4" dy="0" />
+            <feComponentTransfer>
+                <feFuncA type="linear" slope="0.1" />
+            </feComponentTransfer>
+            <feMerge>
+                <feMergeNode/>
+                <feMergeNode in="SourceGraphic" />
+            </feMerge>
+        </filter>
+        <filter id="f-career-dev">
+            <feGaussianBlur in="SourceAlpha" stdDeviation="0" />
+            <feOffset dx="0" dy="-4" />
+            <feComponentTransfer>
+                <feFuncA type="linear" slope="0.1" />
+            </feComponentTransfer>
+            <feMerge>
+                <feMergeNode/>
+                <feMergeNode in="SourceGraphic" />
+            </feMerge>
+        </filter>
+        <filter id="f-end-year">
+            <feGaussianBlur in="SourceAlpha" stdDeviation="0" />
+            <feOffset dx="4" dy="0" />
+            <feComponentTransfer>
+                <feFuncA type="linear" slope="0.1" />
+            </feComponentTransfer>
+            <feMerge>
+                <feMergeNode/>
+                <feMergeNode in="SourceGraphic" />
+            </feMerge>
+        </filter>
+    </defs>
+    <title>Talent Development</title>
+    <g>
+        <g class="ring slice" id="s-ongoing-dialog">
+            <!-- <path d="M391.5052,187.7131C386.1837,80.3849,294.863-2.3078,187.5348,3.0137A193.8446,193.8446,0,0,0,60.0637,59.2985l10.088,9.1349a181.1476,181.1476,0,1,1-18.1689,20.884l8.363,6.7664L60.2,68.0712l-27.426,5.7049,8.6357,6.987A193.7561,193.7561,0,0,0,2.8353,206.984c5.3216,107.3283,96.6422,190.021,203.97,184.7S396.8267,295.0413,391.5052,187.7131Z" transform="translate(-2.5924 -2.7706)" /> -->
+            <path d="M18.0822,198.1161c-0.0011-.2563-0.01-0.5109-0.01-0.7675A178.922,178.922,0,0,1,190.7585,18.5411l8.02-8.02-7.6547-7.6547C86.3806,5.9746,2.422,91.8526,2.422,197.3485c0,0.1111.004,0.2211,0.0042,0.3322l7.61-7.61Z" transform="translate(-2.422 -2.7705)" />
+            <path d="M196.5,18.4273c0.167,0,.3328-0.0063.5-0.0063A178.922,178.922,0,0,1,375.8074,191.107l8.152,8.152,7.5323-7.5323C388.5158,86.865,302.5816,2.7705,197,2.7705c-0.1111,0-.2211.004-0.3322,0.0042l7.7424,7.7424Z" transform="translate(-2.422 -2.7705)" />
+            <path d="M375.8839,196.8487c0,0.167.025,0.3328,0.025,0.5a178.9137,178.9137,0,0,1-172.402,178.797l-8.29,8.2946,7.3272,7.4c104.8617-2.976,188.8833-88.91,188.8833-194.4917v-0.0712l-7.5388,7.6136Z" transform="translate(-2.422 -2.7705)" />
+            <path d="M197.7675,376.2664c-0.2563.0011-.5109,0.01-0.7675,0.01A178.9217,178.9217,0,0,1,18.203,203.8648l-8.1624-8.1624L2.518,203.4392C5.626,308.1822,91.504,392.3552,197,392.3552h0.0712L189.59,384.659Z" transform="translate(-2.422 -2.7705)" />
+        </g>
+    </g>
+    <g id="convo-bubbles-bottom" class="ring-peices slice">
+        <path d="M372.1,320.73a11.0012,11.0012,0,0,1,2.2541,6.5485c0,8.4667-9.6817,15.0762-21.5822,15.0762h-0.08c3.9712,3,9.6939,4.6392,15.963,4.2168l1.0682,0.0661-0.0422,6.6985,6.5315-8.1459,0.2462-.08c6.062-2.3935,9.8278-6.8155,9.8278-11.5537C386.2869,327.472,380.283,322.3336,372.1,320.73Z" transform="translate(-2.5924 -2.7706)" />
+        <path d="M369.2357,320.3254c-3.4928-3.68-9.5676-6.1208-16.4636-6.1208-10.8037,0-19.593,5.99-19.593,13.3525,0,4.7382,3.7658,9.1688,9.8278,11.5624l0.2462,0.0973,6.532,8.1806-0.0422-6.6291,0.4782,0.0326,0.59,0.04c0.6589,0.0445,1.3187.0675,1.9611,0.0675,10.8037,0,19.5934-5.9895,19.5934-13.3515A10.4948,10.4948,0,0,0,369.2357,320.3254Z" transform="translate(-2.5924 -2.7706)" />
+        <text transform="translate(318.9193 400.3513) rotate(-33.9998)" style="font-size: 12px;font-family: Source Sans Pro;font-weight: 600">J
+            <tspan x="5.7383" y="0">a</tspan>
+            <tspan x="11.9688" y="0">n&ndash;</tspan>
+            <tspan x="22.8477" y="0">De</tspan>
+            <tspan x="36.4604" y="0">c</tspan>
+        </text>
+    </g>
+    <g id="slices">
+        <g class="slice" id="s-year-end-review" transform="tanslate(0.0 0.0) scale(1.0)">
+            <path d="M150.1418,196.8279A47.4734,47.4734,0,0,1,163.58,163.68l-85.46-85.46a167.8507,167.8507,0,0,0,0,237.3769l85.5388-85.5387A47.4756,47.4756,0,0,1,150.1418,196.8279Z" transform="translate(-2.5924 -2.7706)" />
+                <text transform="translate(65.3389 230.2881)" style="font-size: 12px;font-family: Source Sans Pro;font-weight: 600">O
+                    <tspan x="8.0845" y="0">c</tspan>
+                    <tspan x="13.814" y="0">t</tspan>
+                    <tspan x="17.7681" y="0">&ndash;</tspan>
+                    <tspan x="23.6914" y="0">De</tspan>
+                    <tspan x="37.3037" y="0">c</tspan>
+                </text>
+            <text transform="translate(41.4275 188.3967)" style="font-size: 24px;font-family: Source Sans Pro;font-weight: 600">
+                <tspan style="letter-spacing: -1px">Y</tspan>
+                <tspan x="10.7324" y="0">e</tspan>
+                <tspan x="22.6099" y="0">a</tspan>
+                <tspan x="34.9814" y="0">r</tspan>
+                <tspan x="43.2012" y="0">-</tspan>
+                <tspan x="51.1401" y="0">E</tspan>
+                <tspan x="63.5576" y="0">n</tspan>
+                <tspan x="76.8896" y="0">d</tspan>
+                <tspan x="8.4634" y="24">R</tspan>
+                <tspan x="22.4458" y="24">e</tspan>
+                <tspan x="34.3184" y="24">v</tspan>
+                <tspan x="46.0757" y="24">i</tspan>
+                <tspan x="52.1284" y="24">e</tspan>
+                <tspan x="64.0103" y="24">w</tspan>
+            </text>
+        </g>
+        <g class="slice" id="s-career-development" transform="tanslate(0.0 0.0) scale(1.0)">
+            <path d="M197.785,244.4713a47.4894,47.4894,0,0,1-34.1257-14.4126L78.1206,315.5974a167.85,167.85,0,0,0,237.3769,0l-84.5646-84.5646A47.4731,47.4731,0,0,1,197.785,244.4713Z" transform="translate(-2.5924 -2.7706)" />
+            <text transform="translate(174.5405 325.5492)" style="font-size: 12px;font-family: Source Sans Pro;font-weight: 600">J
+                    <tspan x="5.8525" y="0">u</tspan>
+                    <tspan x="12.4561" y="0">l</tspan>
+                    <tspan x="15.7246" y="0">&ndash;</tspan>
+                    <tspan x="21.2842" y="0">S</tspan>
+                    <tspan x="27.8516" y="0">e</tspan>
+                    <tspan x="33.9502" y="0">p</tspan>
+                </text>            <text transform="translate(160.6821 284.1956)" style="font-size: 24px;font-family: Source Sans Pro;font-weight: 600">C
+                <tspan x="13.752" y="0">a</tspan>
+                <tspan x="26.124" y="0">r</tspan>
+                <tspan x="34.9028" y="0">e</tspan>
+                <tspan x="47.0322" y="0">e</tspan>
+                <tspan x="59.1421" y="0">r</tspan>
+                <tspan x="-34.5347" y="24">D</tspan>
+                <tspan x="-19.6216" y="24">e</tspan>
+                <tspan x="-7.749" y="24">v</tspan>
+                <tspan x="3.7134" y="24">e</tspan>
+                <tspan x="15.7852" y="24">l</tspan>
+                <tspan x="22.0586" y="24">o</tspan>
+                <tspan x="35.0903" y="24">p</tspan>
+                <tspan x="48.5303" y="24">m</tspan>
+                <tspan x="68.6733" y="24">e</tspan>
+                <tspan x="80.7832" y="24">n</tspan>
+                <tspan x="93.9644" y="24">t</tspan>
+            </text>
+        </g>
+        <g class="slice" id="s-mid-year-review" transform="tanslate(0.0 0.0) scale(1.0)">
+            <path d="M315.4974,78.2205l-84.4816,84.4817a47.6056,47.6056,0,0,1-.083,68.3306l84.5646,84.5646A167.85,167.85,0,0,0,315.4974,78.2205Z" transform="translate(-2.5924 -2.7706)" />
+            <text transform="translate(257.2775 188.3969)" style="font-size: 24px;font-family: Source Sans Pro;font-weight: 600">M
+                <tspan x="17.623" y="0">i</tspan>
+                <tspan x="23.7021" y="0">d</tspan>
+                <tspan x="37.4009" y="0">-</tspan>
+                <tspan x="44.2095" y="0" style="letter-spacing: -1px">Y</tspan>
+                <tspan x="54.9419" y="0">e</tspan>
+                <tspan x="66.8193" y="0">a</tspan>
+                <tspan x="79.1914" y="0">r</tspan>
+                <tspan x="7.3218" y="24">R</tspan>
+                <tspan x="21.3042" y="24">e</tspan>
+                <tspan x="33.1768" y="24">v</tspan>
+                <tspan x="44.9341" y="24">i</tspan>
+                <tspan x="50.9868" y="24">e</tspan>
+                <tspan x="62.8687" y="24">w</tspan>
+            </text>
+             <text transform="translate(280.3346 229.8002)" style="font-size: 12px;font-family: Source Sans Pro;font-weight: 600">A
+                    <tspan x="6.7715" y="0">p</tspan>
+                    <tspan x="13.5396" y="0">r</tspan>
+                    <tspan x="17.7007" y="0">&ndash;</tspan>
+                    <tspan x="23.2402" y="0">J</tspan>
+                    <tspan x="29.0923" y="0">u</tspan>
+                    <tspan x="35.6982" y="0">n</tspan>
+                </text>
+        </g>
+        <g class="slice" id="s-goal-setting" transform="tanslate(0.0 0.0) scale(1.0)">
+            <path id="pie" d="M197.785,149.1846a47.4758,47.4758,0,0,1,33.2308,13.5176l84.4816-84.4817a167.8507,167.8507,0,0,0-237.3769,0l85.46,85.46A47.49,47.49,0,0,1,197.785,149.1846Z" transform="translate(-2.5924 -2.7706)" />
+          <text transform="translate(172.4198 108.7446)" style="font-size: 12px;font-family: Source Sans Pro;font-weight: 600">J
+                    <tspan x="5.7383" y="0">a</tspan>
+                    <tspan x="11.9688" y="0">n</tspan>
+                    <tspan x="18.8364" y="0">&ndash;</tspan>
+                    <tspan x="24.7593" y="0">M</tspan>
+                    <tspan x="33.5635" y="0">a</tspan>
+                    <tspan x="39.7939" y="0">r</tspan>
+                </text>
+            <text transform="translate(131.4179 91.6267)" style="font-size: 24px;font-family: Source Sans Pro;font-weight: 600">G
+                <tspan x="14.9854" y="0">o</tspan>
+                <tspan x="27.8301" y="0">a</tspan>
+                <tspan x="40.1733" y="0">l </tspan>
+                <tspan x="51.5967" y="0">S</tspan>
+                <tspan x="64.6431" y="0">e</tspan>
+                <tspan x="76.7603" y="0">t</tspan>
+                <tspan x="85.7168" y="0">t</tspan>
+                <tspan x="94.208" y="0">i</tspan>
+                <tspan x="100.2607" y="0">n</tspan>
+                <tspan x="113.4531" y="0">g</tspan>
+            </text>
+        </g>
+    </g>
+    <g id="ring-text" class="ring-peices slice">
+        <text transform="translate(47.6403 361.1228) rotate(40.0414)" style="font-size: 26px;font-family: Source Sans Pro">O</text>
+        <text transform="matrix(0.8106, 0.5856, -0.5856, 0.8106, 61.1659, 372.2897)" style="font-size: 26px;font-family: Source Sans Pro">n</text>
+        <text transform="translate(72.6451 380.6542) rotate(32.2613)" style="font-size: 26px;font-family: Source Sans Pro">g</text>
+        <text transform="matrix(0.8772, 0.4801, -0.4801, 0.8772, 83.7449, 387.6317)" style="font-size: 25.999990463256836px;font-family: Source Sans Pro">o</text>
+        <text transform="matrix(0.8986, 0.4388, -0.4388, 0.8986, 96.1447, 394.3811)" style="font-size: 26px;font-family: Source Sans Pro">i</text>
+        <text transform="matrix(0.9179, 0.3969, -0.3969, 0.9179, 101.5954, 397.2026)" style="font-size: 26px;font-family: Source Sans Pro">n</text>
+        <text transform="matrix(0.9408, 0.3389, -0.3389, 0.9408, 114.8277, 402.7965)" style="font-size: 26px;font-family: Source Sans Pro">g</text>
+        <text transform="matrix(0.9543, 0.2988, -0.2988, 0.9543, 127.296, 407.2002)" style="font-size: 26px;font-family: Source Sans Pro"> </text>
+        <text transform="translate(132.5552 409.018) rotate(14.5859)" style="font-size: 25.999990463256836px;font-family: Source Sans Pro">D</text>
+        <text transform="translate(148.0279 412.8503) rotate(11.737)" style="font-size: 26px;font-family: Source Sans Pro">i</text>
+        <text transform="translate(153.8123 414.1492) rotate(9.3608)" style="font-size: 26px;font-family: Source Sans Pro">a</text>
+        <text transform="matrix(0.9927, 0.1204, -0.1204, 0.9927, 166.7956, 416.1855)" style="font-size: 26px;font-family: Source Sans Pro">l</text>
+        <text transform="translate(173.191 417.0871) rotate(4.4299)" style="font-size: 26px;font-family: Source Sans Pro">o</text>
+        <text transform="translate(187.2036 418.2285) rotate(1.1586)" style="font-size: 26px;font-family: Source Sans Pro">g</text>
+        <text transform="translate(200.8185 418.4529) rotate(-3.1793)" style="font-size: 26px;font-family: Source Sans Pro">u</text>
+        <text transform="translate(215.2724 417.5876) rotate(-7.9183)" style="font-size: 26px;font-family: Source Sans Pro">e</text>
+        <text transform="matrix(0.9822, -0.1878, 0.1878, 0.9822, 228.3837, 415.7101)" style="font-size: 25.999990463256836px;font-family: Source Sans Pro"> </text>
+        <text transform="translate(233.8612 414.8082) rotate(-13.9834)" style="font-size: 26px;font-family: Source Sans Pro">&amp;</text>
+        <text transform="translate(249.5984 410.7262) rotate(-16.9184)" style="font-size: 26px;font-family: Source Sans Pro"> </text>
+        <text transform="translate(254.894 409.1795) rotate(-19.5245)" style="font-size: 26px;font-family: Source Sans Pro">C</text>
+        <text transform="translate(268.7568 404.3303) rotate(-23.0119)" style="font-size: 26px;font-family: Source Sans Pro">o</text>
+        <text transform="translate(281.7619 398.7574) rotate(-26.1338)" style="font-size: 26px;font-family: Source Sans Pro">a</text>
+        <text transform="translate(293.762 392.888) rotate(-28.9397)" style="font-size: 26px;font-family: Source Sans Pro">c</text>
+        <text transform="matrix(0.8502, -0.5265, 0.5265, 0.8502, 304.1165, 387.1353)" style="font-size: 26px;font-family: Source Sans Pro">h</text>
+        <text transform="matrix(0.8295, -0.5585, 0.5585, 0.8295, 315.9889, 379.7011)" style="font-size: 26px;font-family: Source Sans Pro">i</text>
+        <text transform="matrix(0.8076, -0.5897, 0.5897, 0.8076, 320.9523, 376.5115)" style="font-size: 26px;font-family: Source Sans Pro">n</text>
+        <text transform="matrix(0.7756, -0.6312, 0.6312, 0.7756, 332.4365, 368.1205)" style="font-size: 26px;font-family: Source Sans Pro">g</text>
+    </g>
+    <g>
+        <g class="slice" id="s-center">
+            <path d="M231.0158,162.7022a47.6056,47.6056,0,1,0,14.4126,34.1257A47.4758,47.4758,0,0,0,231.0158,162.7022Z" transform="translate(-2.5924 -2.7706)" style="fill: #f9f9f9" />
+            <g>
+                <g id="convo-bubbles" class="ring-peices">
+                    <path d="M191.3243,184.3552h-0.0455a26.2053,26.2053,0,0,0,13.1524,3.97c0.6024,0,1.2241.03,1.8476,0.03h1.0047l-0.04,6.2668,6.15-7.6117,0.2313-.0727c5.7064-2.238,9.2517-6.37,9.2517-10.8,0-5.6862-5.6532-10.4823-13.3513-11.9831a10.229,10.229,0,0,1,2.1176,6.1091C211.6424,178.1781,202.5278,184.3552,191.3243,184.3552Z" transform="translate(-2.5924 -2.7706)" />
+                    <path d="M188.4729,182.8808l1.0047,0.0668c0.6226,0.042,1.2443.063,1.8467,0.063,10.1714,0,18.4458-5.5985,18.4458-12.4806s-8.2744-12.4825-18.4458-12.4825-18.4449,5.5995-18.4449,12.4825c0,4.4293,3.5453,8.5706,9.2517,10.8086l0.2313,0.09,6.15,7.6473Z" transform="translate(-2.5924 -2.7706)" />
+                </g>
+                <g id="left-dude" class="ring-peices">
+                    <path d="M187.8826,229.2136H177.644a2.1308,2.1308,0,0,1-2.1308-2.1308V213.88a7.25,7.25,0,0,1,7.25-7.25h0a7.25,7.25,0,0,1,7.25,7.25v13.2029A2.1308,2.1308,0,0,1,187.8826,229.2136Z" transform="translate(-2.5924 -2.7706)" />
+                    <circle cx="180.1708" cy="195.6469" r="7.25" />
+                </g>
+                <g id="right-dude" class="ring-peices">
+                    <path d="M214.8894,235.9448H204.6509a2.1308,2.1308,0,0,1-2.1308-2.1307V220.6112a7.25,7.25,0,0,1,7.25-7.25h0a7.25,7.25,0,0,1,7.25,7.25v13.2029A2.1308,2.1308,0,0,1,214.8894,235.9448Z" transform="translate(-2.5924 -2.7706)" />
+                    <circle cx="207.1777" cy="202.3781" r="7.25" />
+                </g>
+            </g>
+        </g>
+    </g>
+</g>
+
+
+
+       </svg>
         <div class="row timeline-link-container"><a href="#/timeline" class="timeline-link btn btn-default"><span class="glyphicon glyphicon-calendar"> </span> View Activity Timeline</a></div>
 
       </div>
@@ -44,7 +283,6 @@
 <script src="libs/angularjs/1.5.5/angular.min.js"></script>
 <script src="libs/angular-ui-router/0.3.1/angular-ui-router.min.js"></script>
 <script src="libs/angular-sanitize/1.5.5/angular-sanitize.min.js"></script>
-<script src="libs/snapsvg/snap.svg.js"></script>
 
 <script src="js/app.js"></script>
 
@@ -66,7 +304,8 @@
 <script src="js/dialogCtrl.js"></script>
 
 <!--<script src="js/pageCtrl.js"></script>-->
-
+<script src="js/jquery.svg.min.js"></script>
+<script src="js/jquery.svganim.js"></script>
 <script src="js/svg.js"></script>
 
 <!-- Our Website Javascripts --> 
